Safari fixes: working map, centered buttons, visible "types of services

--- a/simple_ui/static/scss/main.scss
+++ b/simple_ui/static/scss/main.scss
@@ -482,8 +482,16 @@ region-flag {
   @media print {
     display: none;
   }
-  i {
-    color: #528d57;
+  .navigation-button-inner {
+    @include flexbox();
+    margin: 0 auto;
+      i {
+        margin: auto;
+        color: #528d57;
+      }
+      .button-info {
+        margin: 0 auto;
+      }
   }
   &:hover {
     text-decoration: none;
@@ -1429,6 +1437,9 @@ nav {
       padding-right: 2px;
       color: #000;
     }
+  }
+  ul {
+    margin-top: initial;
   }
 }
 
